# lib/db/src/schema/residents.ts
@@ -1,4 +1,4 @@
-import { pgTable, serial, text } from "drizzle-orm/pg-core";
+import { pgTable, serial, text, boolean } from "drizzle-orm/pg-core";
 import { createInsertSchema } from "drizzle-zod";
 import { z } from "zod/v4";
 
@@ -6,6 +6,7 @@ export const residentsTable = pgTable("residents", {
   id: serial("id").primaryKey(),
   name: text("name").notNull(),
   room: text("room").notNull(),
+  isFavorited: boolean("is_favorited").notNull().default(false),
 });
 
 export const insertResidentSchema = createInsertSchema(residentsTable).omit({ id: true });
